--- a/budget_simulator/requirements.txt
+++ b/budget_simulator/requirements.txt
@@ -1,10 +1,11 @@
-Flask==2.3.3
-numpy==1.24.3
-python-dateutil==2.8.2
-Werkzeug==2.3.7
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-click==8.1.7
-itsdangerous==2.1.2
-blinker==1.6.3
-certifi==2023.7.22
+Flask
+numpy
+python-dateutil
+Werkzeug
+Jinja
+MarkupSafe
+click
+itsdangerous
+blinker
+certifi
+ollama
